@@ -1,4 +1,4 @@
-.TH qodem-x11 1 "April 27, 2017"
+.TH qodem-x11 1 "June 18, 2017"
 
 .SH NAME
 qodem-x11 \- Qodem Terminal Emulator (X11 Version)
