@@ -1,4 +1,4 @@
-.TH qodem 1 "April 27, 2017"
+.TH qodem 1 "June 18, 2017"
 
 .SH NAME
 qodem \- Qodem Terminal Emulator
