@@ -1,4 +1,4 @@
-.TH xqodem 1 "April 27, 2017"
+.TH xqodem 1 "June 18, 2017"
 .SH NAME
 xqodem \- Qodem Terminal Emulator
 .SH SYNOPSIS
