@@ -2,7 +2,7 @@ qodem (1.0.0-1) unstable; urgency=low
 
   * New upstream release
 
- -- Kevin Lamonte <kevin.lamonte@gmail.com>  Thu, 27 Apr 2017 12:00:00 -0600
+ -- Kevin Lamonte <kevin.lamonte@gmail.com>  Sun, 18 Jun 2017 12:00:00 -0600
 
 qodem (1.0~beta-1) unstable; urgency=low
 
